round list and new round + general fix
