# src/api/openapi.yaml
@@ -11,31 +11,43 @@ components:
       type: object
       required:
         - name
-        - editId
-        - created
-        - answers
-        - templateId
+        - template
+        - lastDate
+        - nameIsAnonymous
         - authorizedUsers
-        - authorizedUserIds
-      description: A round
+        - description
       properties:
         name:
           type: string
-        editId:
+        template:
+          type: string
+        lastDate:
+          type: string
+          format: date-time
+        nameIsAnonymous:
           type: string
         authorizedUsers:
-          type: object # Assuming this should be an object, adjust if needed
-        authorizedUserIds:
-          type: array # Corrected this line
-          items:
-            type: string
-        created:
-          type: string
-          format: date
-        answers:
           type: array
-        templateId:
+          items:
+            $ref: '#/components/schemas/CoWorker'
+        description:
           type: string
+    CoWorker:
+      type: object
+      required:
+        - userId
+        - userName
+        - id
+      properties:
+        id:
+          type: string
+          description: The auto-generated id of the coworker
+        userId:
+          type: string
+          description: The ID of the user
+        userName:
+          type: string
+          description: The name of the user
     UserResponse:
       type: object
       properties:
@@ -52,6 +64,21 @@ components:
           type: number
         motivation:
           type: string
+    Template:
+      type: object
+      properties:
+        id:
+          type: string
+          description: The ID of the template
+        name:
+          type: string
+          description: The name of the template
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
 paths:
   /round/edit/{editId}:
     get:
@@ -121,3 +148,93 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Round"
+
+  /newfeedbackround/coworkers:
+    get:
+      summary: Returns the list of all the coworkers
+      tags:
+        - CoWorkers
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CoWorker"
+        "404":
+          description: No coworkers found
+
+  /newfeedbackround/templates:
+    get:
+      summary: Returns the list of all templates
+      tags:
+        - Templates
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Template"
+        "404":
+          description: No templates found
+
+  /newfeedbackround/:
+    post:
+      summary: Create a new feedback round
+      operationId: CreateFeedbackRound
+      tags:
+        - Round
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Round"
+      responses:
+        "201":
+          description: Feedback round created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Round"
+        "400":
+          description: Invalid input
+        "401":
+          description: Unauthorized
+        "500":
+          description: Server error
+
+  /rounds:
+    get:
+      summary: Get rounds for a user
+      operationId: GetUserRounds
+      tags:
+        - Round
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Round"
+        "401":
+          description: Unauthorized
+        "404":
+          description: No rounds found
+        "500":
+          description: Server error
