# src/api/src/auth.ts
@@ -4,7 +4,8 @@ import jwksClient from "jwks-rsa";
 
 // Define a custom JwtPayloadWithUsername extending JwtPayload
 interface JwtPayloadWithUsername extends JwtPayload {
-  preferred_username?: string;
+  preferredUserId?: string;
+  preferredUserName?: string;
 }
 
 // Set up the JWKS client
@@ -15,15 +16,12 @@ const client = jwksClient({
 
 // Function to get the signing key
 function getKey(header: jwt.JwtHeader, callback: jwt.SigningKeyCallback) {
-  console.log("JWT Header:", header);
-
   client.getSigningKey(header.kid, (err, key) => {
     if (err) {
-      console.error("Error getting signing key:", err);
       callback(err);
     } else {
       const signingKey = key?.getPublicKey();
-      console.log("Retrieved signing key:", signingKey);
+
       callback(null, signingKey);
     }
   });
@@ -33,11 +31,9 @@ function getKey(header: jwt.JwtHeader, callback: jwt.SigningKeyCallback) {
 export default (req: Request, res: Response, next: NextFunction) => {
   const authHeader = req.header("Authorization");
   if (!authHeader) {
-    console.error("Authorization header missing");
     return res.status(401).json({ msg: "No token, authorization denied" });
   }
   const token = authHeader.split(" ")[1]; // Extract the token from the Bearer scheme
-  console.log("Extracted token:", token);
 
   if (!token) {
     console.error("Token not present in authorization header");
@@ -54,12 +50,15 @@ export default (req: Request, res: Response, next: NextFunction) => {
         console.error("Token verification failed:", err);
         return res.status(401).json({ msg: "Token is not valid" });
       }
-      console.log("Token verified successfully:", decoded);
+
       // Extract preferred_username from the decoded token
-      const preferredUsername: string = decoded?.payload?.preferred_username || "";
-      console.log("Preferred Username:", preferredUsername);
+      const preferredUserId: string =
+        decoded?.payload?.preferred_username || "";
+      const preferredUserName: string = decoded?.payload?.name || "";
+
       // Attach the extracted preferred_username to the request object
-      (req as any).preferredUsername = preferredUsername;
+      (req as any).preferredUserId = preferredUserId;
+      (req as any).preferredUserName = preferredUserName;
       next();
     }
   );
