# src/api/src/routes/viewRounds.ts
@@ -1,7 +1,5 @@
 import express, { Request } from "express";
-
 import { RoundListModel } from "../models/round";
-
 import mongoose from "mongoose";
 import { TemplateModel } from "../models/template";
 
@@ -10,6 +8,24 @@ const router = express.Router();
 type ViewParams = {
   id: string;
 };
+router.get("/", async (req: Request, res) => {
+  try {
+    const userId = (req as any).preferedUserId;
+    const list = await RoundListModel.find({ authorizedUsersIds: userId })
+      .orFail()
+      .exec();
+
+    res.status(200).json(list);
+  } catch (err: any) {
+    switch (err.constructor) {
+      case mongoose.Error.CastError:
+      case mongoose.Error.DocumentNotFoundError:
+        return res.status(404).send();
+      default:
+        return res.status(500).send(); // Send a 500 status code for other errors
+    }
+  }
+});
 
 router.get("/view/:id", async (req: Request<ViewParams>, res) => {
   try {
@@ -22,7 +38,6 @@ router.get("/view/:id", async (req: Request<ViewParams>, res) => {
       return res.status(404).send("Template not found");
     }
     const roundDoc = list.toObject();
-
     // remove _id to mask viewChart
     res.json({ ...roundDoc, templateData: template });
   } catch (err: any) {
